--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_order_preflight4cloud.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_order_preflight4cloud.ini
@@ -65,16 +65,27 @@ COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_COLOR_LAB="Lab"
 
 
 ;show uploads
-COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_UPLOAD_MORE="Meer bestanden uploaden"
-COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_WIZARD="Naar de wizard"
-
+COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_RESULTS_TITLE="Resultaten Preflight"
+COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_RESULTS_DETAILS="Details Preflight"
+COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_UPLOAD_DIFF="Ander bestand uploaden"
+COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_RESULTS_BUTTONDESCR="Beschrijf hier een mooie tekst over wat de gebruiker kan doe met de knoppen die hier onder staan"
+COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_WIZARD="Ga naar de productwizard"
+COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_PRODUCT="Product zelf samenstellen"
+COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_FILE_DETAILS="Volledig rapport"
+COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_CURR_BESTAND="Huidig bestand"
+COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_WIZARD_MATCHED_PRODUCT="Bijbehorend product"
 ;wizard
+COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_UPLOAD_FILE="Upload eerst een bestand"
 COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_SELECT_FILE="Selecteer eerst een bestand"
 COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_STAP_SPR="Stap %d"
 COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_VORIGE="Vorige stap"
 COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_VOLGENDE="Volgende stap"
+COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_FINISH="Afronden"
+COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_NAAR_PRODUCT="Naar product"
 COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_ANDER_BESTAND="Ander bestand"
 COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_UW_PRODUCT="Uw product"
 
 COM_BIXPRINTSHOP_PLUGIN_PREFLIGHT4CLOUD_THUMB="Preview"
 COM_BIXPRINTSHOP_PLUGIN_PREFLIGHT4CLOUD_SEL_PRODUCT="Product"
+
+COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_WIZARD_FINISH="Finish"
