--- a/language/nl-NL/nl-NL.mod_bps_preflight4cloud.ini
+++ b/language/nl-NL/nl-NL.mod_bps_preflight4cloud.ini
@@ -2,3 +2,6 @@
 
 MOD_BPS_PREFLIGHT4CLOUD="Bixie Printshop Preflight 4Cloud uploadmodule"
 MOD_BPS_PREFLIGHT4CLOUD_XML_DESCRIPTION="Biedt de mogelijkheid een uploader voor de preflight van 4Cloud te tonen."
+
+;uploader
+MOD_BPS_PREFLIGHT4CLOUD_DROPFILES="Of sleep direct uw bestand in het kader"
