descr + rem stappenlang

--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_order_preflight4cloud.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_order_preflight4cloud.ini
@@ -68,7 +68,7 @@ COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_COLOR_LAB="Lab"
 COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_RESULTS_TITLE="Resultaten Preflight"
 COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_RESULTS_DETAILS="Details Preflight"
 COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_UPLOAD_DIFF="Ander bestand uploaden"
-COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_RESULTS_BUTTONDESCR="Beschrijf hier een mooie tekst over wat de gebruiker kan doe met de knoppen die hier onder staan"
+COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_RESULTS_BUTTONDESCR="Uw PDF bestand is gecontroleerd en hieronder ziet u het volledige rapport. Mocht u nog vragen hebben over dit rapport neemt u dan contact op met onze <a href="_QQ_"/contact"_QQ_" title="_QQ_"Klantenservice"_QQ_">klantenservice</a>. Nu kunt u uw drukwerk zelf samenstellen en eenvoudig bestellen. Om zelf uw product samen te stellen met alle mogelijke productopties kiest u voor "_QQ_"Product zelf samenstellen"_QQ_". Om eenvoudig uw drukwerk te bestellen kiest u voor "_QQ_"Ga naar de productwizard"_QQ_". "
 COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_WIZARD="Ga naar de productwizard"
 COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_PRODUCT="Product zelf samenstellen"
 COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_FILE_DETAILS="Volledig rapport"
@@ -77,7 +77,6 @@ COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_WIZARD_MATCHED_PRODUCT="Bijbehorend product"
 ;wizard
 COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_UPLOAD_FILE="Upload eerst een bestand"
 COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_SELECT_FILE="Selecteer eerst een bestand"
-COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_STAP_SPR="Stap %d"
 COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_VORIGE="Vorige stap"
 COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_VOLGENDE="Volgende stap"
 COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_FINISH="Afronden"
@@ -88,4 +87,3 @@ COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_UW_PRODUCT="Uw product"
 COM_BIXPRINTSHOP_PLUGIN_PREFLIGHT4CLOUD_THUMB="Preview"
 COM_BIXPRINTSHOP_PLUGIN_PREFLIGHT4CLOUD_SEL_PRODUCT="Product"
 
-COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_WIZARD_FINISH="Finish"
