--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_betaal_buckaroo.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_betaal_buckaroo.ini
@@ -36,7 +36,9 @@ COM_BIXPRINTSHOP_CONFIG_BETALEN_BUCKAROO_CREDIT_DESC_SPR="Creditnota %s, bestell
 COM_BIXPRINTSHOP_BETALING_GESLAAGD="Je betaling is succesvol verwerkt!"
 COM_BIXPRINTSHOP_PLUGIN_BUCKAROO_SUCCESS="Betaling succesvol aangevraagd."
 COM_BIXPRINTSHOP_BETALING_MISLUKT="Betaling mislukt."
+COM_BIXPRINTSHOP_PLUGIN_BUCKAROO_PAYTOEMAILSUCCESS="Het betaalverzoek is succesvol geregistreerd bij Buckaroo."
 COM_BIXPRINTSHOP_PLUGIN_BUCKAROO_TRANSFERSUCCESS="Het verzoek tot overschrijving is succesvol geregistreerd bij onze betaalprovider Buckaroo. Je ontvangt straks een mail met betaalinstructies."
+COM_BIXPRINTSHOP_PLUGIN_BUCKAROO_PAYPERMAIL_MESS_SPR="U kunt deze factuur betalen middels deze URL: <a href="_QQ_"%s"_QQ_">%s</a>"
 
 BIX_PLUGIN_BUCKAROO_REMINDER_SPR="Aanmaning %s verstuurd"
 BIX_PLUGIN_BUCKAROO_BETAALRETURN_SPR="Returnpost van Buckaroo: bestelID %s, betaalID %s"
