--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -76,7 +76,9 @@ COM_BIXPRINTSHOP_MAIL_SENT_SPR="Email naar %s succesvol verzonden"
 BIX_AANTAL_PAGS="Aantal pagina's"
 BIX_GAST="Gastgebruiker"
 BIX_UP="omhoog"
-;attribtype voor rendering buiten product
+BIX_NONE="Geen"
+BIX_AANTAL_STUKS="Aantal stuks"
+; attribtype voor rendering buiten product
 COM_BIXPRINTSHOP_ATTRIBTYPE_EIGENTEKST_TEKST="Eigen tekst"
 COM_BIXPRINTSHOP_ATTRIBTYPE_EIGENTEKST_LETTERTYPE="Lettertype"
 COM_BIXPRINTSHOP_ATTRIBTYPE_BUNDELEN_AANTALBUNDELS="Aantal bundels"
@@ -615,6 +617,7 @@ COM_BIXPRINTSHOP_PARAMS_SELECTTYPE_HTML="Html selector"
 COM_BIXPRINTSHOP_PARAMS_SELECTTYPE_SELECT="Pulldown klassiek"
 COM_BIXPRINTSHOP_PARAMS_SELECTTYPE_RADIO="Radio bullets"
 COM_BIXPRINTSHOP_PARAMS_SELECTTYPE_INPUT="Input veld"
+COM_BIXPRINTSHOP_PARAMS_SELECTTYPE_MULTIDATA="Multidata"
 COM_BIXPRINTSHOP_PARAMS_NEWLINE="Nieuwe regel"
 COM_BIXPRINTSHOP_PARAMS_NEWLINE_DESC="Plaats iedere optie op een nieuwe regel."
 COM_BIXPRINTSHOP_PRODUCTEN_MENU_BULLETALIGN="Uitlijning bullet"
